fixed overlapping and added some styling

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@
  
 #home{
     display: flex;
+    position: relative;
     flex-direction: column;
     padding: 10px 150px;
     height: 510px;
@@ -119,7 +120,7 @@
 }
 
 #services{
-     margin: 30px;
+     margin: 1%;
      display: flex;
      
 }
@@ -129,8 +130,9 @@
     margin: 22px 9px;
     border-radius: 25px;
     font-size: 1rem;
-
-
+}
+#services-container{
+    background-color: #edf6f9;
 }
 #services .box img{
     height: 150px;
@@ -143,6 +145,10 @@
     text-align: center;
     font-size: 1rem;
  font-family: 'Bree Serif', serif;
+}
+#services .box:hover{
+    cursor: pointer;
+    background-color: aliceblue;
 }
 #client{
     display: flex;
